[tool.poetry]
name = "spinningup-rl-jax"
version = "0.1.0"
description = "Implementation of RL Algorithms in JAX Framework inspired by OpenAI spinningup RL resource"
authors = ["sandeshkatakam <sandeshkatakam@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
hydra-core = "^1.3.2"
mkdocs-material = "^9.5.35"
mkdocs-autorefs = "^1.2.0"
mkdocs-include-exclude-files = "^0.0.1"
mknotebooks = "^0.8.0"
mkdocstrings = "^0.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
